Fixed right align and 100% height of create new event modal

--- a/src/public/css/create-new-event.css
+++ b/src/public/css/create-new-event.css
@@ -129,6 +129,8 @@ textarea{
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
 box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+background-color:#000000;
+color:#ffffff;
 }
 
 .btn-circle link:hover {
@@ -177,4 +179,9 @@ box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
  }
 .clear-divs {
 	clear:both;
+}
+.modal-dialog {
+	float:right;
+	margin-top:-15px;
+	margin-bottom:-10px;
 }
